# second_project_builder

./: .env_template  .gitignore  README.md  clean.sh  clean_run.sh  context_initializer.sh  gen_code.sh  implementation plan  main.py  pyproject.toml  seed prompt  split_chars.py
src/: engine.py  factory.py  main.py
src/nodes/: architect.py  base.py  cloner.py  coder.py  discovery.py  environment.py  factory.py  init.py  monitor.py  planner.py  pr_creator.py  pusher.py  qa.py  reporter.py  reviewer.py  scaffold.py  test_designer.py
src/state/: project_state.py
src/utils/: debug.py  parser.py  protocols.py  safety.py  scanner.py
tests/: run_graft_sequence.py  run_pusher_standalone.py  run_qa_standalone.py  solo_coder.py  test_monitor_planner.py
